--- a/Catch/MainPage.xaml
+++ b/Catch/MainPage.xaml
@@ -5,11 +5,11 @@
     xmlns:local="using:Catch"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:xaml="using:Microsoft.Graphics.Canvas.UI.Xaml"
+    xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d">
 
     <Canvas x:Name="layout" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" SizeChanged="Canvas_SizeChanged">
-        <xaml:CanvasAnimatedControl x:Name="cvs" ClearColor="Black" Update="cvs_Update" Draw="cvs_Draw" CreateResources="cvs_CreateResources" SizeChanged="cvs_SizeChanged"/>
+        <canvas:CanvasAnimatedControl x:Name="cvs" ClearColor="Black" Update="OnUpdate" Draw="OnDraw" CreateResources="OnCreateResources" SizeChanged="cvs_SizeChanged" GameLoopStarting="OnGameLoopStarting" GameLoopStopped="OnGameLoopStopped" />
         <TextBlock x:Name="txtLen" Canvas.Left="10" TextWrapping="Wrap" Text="0.0" Canvas.Top="10" Height="80" Width="282" FontSize="72" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <ScrollViewer x:Name="scrlLog" Height="248" Width="345" HorizontalAlignment="Right" VerticalAlignment="Top" Canvas.Left="1011" Canvas.Top="10" IsDoubleTapEnabled="False" IsHoldingEnabled="False" IsRightTapEnabled="False" IsTapEnabled="False" ManipulationMode="None">
             <TextBlock x:Name="txtLog" TextWrapping="Wrap" Text="Log" IsDoubleTapEnabled="False" IsHoldingEnabled="False" IsTapEnabled="False" IsRightTapEnabled="False" PointerPressed="txtLog_PointerPressed" PointerMoved="txtLog_PointerMoved" PointerReleased="txtLog_PointerReleased" PointerExited="txtLog_PointerExited"/>
