Upgrade to Windows 10 UWP

--- a/Catch/App.xaml
+++ b/Catch/App.xaml
@@ -2,6 +2,7 @@
     x:Class="Catch.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Catch">
+    xmlns:local="using:Catch"
+    RequestedTheme="Light">
 
 </Application>
