--- a/Catch/MainPage.xaml
+++ b/Catch/MainPage.xaml
@@ -5,7 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Loaded="MainPage_OnLoaded">
 
     <Canvas x:Name="layout" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" SizeChanged="Canvas_SizeChanged">
         <canvas:CanvasAnimatedControl x:Name="cvs" ClearColor="Black" Update="OnUpdate" Draw="OnDraw" CreateResources="OnCreateResources" SizeChanged="cvs_SizeChanged" GameLoopStarting="OnGameLoopStarting" GameLoopStopped="OnGameLoopStopped" />
