Change to variable timing on animation loop

--- a/Catch/MainPage.xaml
+++ b/Catch/MainPage.xaml
@@ -9,6 +9,6 @@
     Loaded="MainPage_OnLoaded">
 
     <Canvas x:Name="Layout" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" SizeChanged="Canvas_SizeChanged">
-        <canvas:CanvasAnimatedControl x:Name="Cvs" ClearColor="Black" Update="OnUpdate" Draw="OnDraw" CreateResources="OnCreateResources" SizeChanged="cvs_SizeChanged" GameLoopStarting="OnGameLoopStarting" GameLoopStopped="OnGameLoopStopped" />
+        <canvas:CanvasAnimatedControl x:Name="Cvs" ClearColor="Black" IsFixedTimeStep="False" Update="OnUpdate" Draw="OnDraw" CreateResources="OnCreateResources" SizeChanged="cvs_SizeChanged" GameLoopStarting="OnGameLoopStarting" GameLoopStopped="OnGameLoopStopped" />
     </Canvas>
 </Page>
